--- a/reports/ASIANPAINT_report.html
+++ b/reports/ASIANPAINT_report.html
@@ -287,7 +287,7 @@
 <li>Promoter shareholding has remained steady at 57.9% with no direct selling activity</li>
 <li>Institutional investors have slightly increased their holdings from 27.63% to 28.44%, indicating maintained confidence</li>
 <li>Promoter pledging has increased from 0% to 9.2%, potentially signaling financial leveraging needs that warrant monitoring</li>
-<li>The data suggests mixed confidence levels among key stakeholders, with no clear evidence of significant accumulation or distribution</li>
+<li><strong>💡 Key Takeaway</strong> - The data suggests mixed confidence levels among key stakeholders, with no clear evidence of significant accumulation or distribution</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -303,7 +303,7 @@
 <li>Financial fundamentals remain strong with industry-leading ROE (23.48%) and consistent dividend payouts (1.45% yield), though recent quarterly performance shows concerning trends</li>
 <li>Technical indicators suggest continued bearish pressure with price trading below key moving averages, though improving RSI from oversold levels may present tactical opportunities</li>
 <li>Premium valuation metrics (P/E of 50.5, P/B of 11.86) appear disconnected from current performance challenges, suggesting market may be pricing in faster recovery than financials currently support</li>
-<li><strong>💡 Key Takeaway</strong> - Significant capacity expansion investments signal management confidence in long-term industry growth driven by urbanization and infrastructure development</li>
+<li>Significant capacity expansion investments signal management confidence in long-term industry growth driven by urbanization and infrastructure development</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
