--- a/reports/BAJAJ-AUTO_report.html
+++ b/reports/BAJAJ-AUTO_report.html
@@ -286,7 +286,7 @@
 <li>Promoter holding remains stable at 58.7%, indicating continued insider confidence despite price weakness</li>
 <li>Domestic institutional investors have increased holdings to 10.06% from 7.66%, showing growing domestic confidence</li>
 <li>Foreign institutional investors reduced stakes from 14.52% to 12.45%, suggesting some international capital outflows</li>
-<li>Recent trading volume spikes on downward price movement indicate possible institutional distribution phase</li>
+<li><strong>💡 Key Takeaway</strong> - Recent trading volume spikes on downward price movement indicate possible institutional distribution phase</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -302,7 +302,7 @@
 <li>Technical picture remains bearish with continued downtrend, but approaching oversold conditions may present potential opportunity</li>
 <li>Company's strategic initiatives in EV development and international expansion position it well for long-term industry transformation</li>
 <li>Current risk-reward ratio favors cautious approach in short term while monitoring for stabilization signals and sales growth recovery</li>
-<li><strong>💡 Key Takeaway</strong> - Premium valuation despite recent price correction suggests market still pricing in long-term growth potential despite near-term challenges</li>
+<li>Premium valuation despite recent price correction suggests market still pricing in long-term growth potential despite near-term challenges</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
