--- a/reports/BEL_report.html
+++ b/reports/BEL_report.html
@@ -291,7 +291,7 @@
 <li>Institutional investors (FIIs at 17.43% and DIIs at 20.93%) absorbed shares sold by promoters</li>
 <li>Retail investor holdings remained stable during this transition</li>
 <li>The consistent promoter holding above 51% and increased institutional investment reflect confidence in BEL's future prospects</li>
-<li>Absence of promoter share pledging combined with recent dividend declarations suggests strong financial health</li>
+<li><strong>💡 Key Takeaway</strong> - Absence of promoter share pledging combined with recent dividend declarations suggests strong financial health</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -308,7 +308,7 @@
 <li>Current valuation (PE 41.00) suggests a premium pricing compared to some competitors, requiring continued growth execution</li>
 <li>Technical indicators show improving momentum with potential bullish reversal forming</li>
 <li>Strong institutional ownership and consistent promoter holding reflect market confidence</li>
-<li><strong>💡 Key Takeaway</strong> - Expanding order book and strategic focus on defense electronics align well with India's growing defense budget and self-reliance initiatives</li>
+<li>Expanding order book and strategic focus on defense electronics align well with India's growing defense budget and self-reliance initiatives</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
