--- a/reports/BHEL_report.html
+++ b/reports/BHEL_report.html
@@ -287,7 +287,7 @@
 <li>Promoter holdings have remained stable at 63.19%, indicating consistent insider confidence</li>
 <li>Foreign Institutional Investors (FIIs) have shown increased interest, raising their holdings from 7.0% to 8.0% between December 2023-2024</li>
 <li>Domestic Institutional Investors (DIIs) have reduced their holdings from 17.6% to 15.5% during the same period</li>
-<li>Retail investor participation has grown, with holdings increasing from 9.65% to 11.40% over the past two years, suggesting growing small investor interest despite institutional caution</li>
+<li><strong>💡 Key Takeaway</strong> - Retail investor participation has grown, with holdings increasing from 9.65% to 11.40% over the past two years, suggesting growing small investor interest despite institutional caution</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -303,7 +303,7 @@
 <li>The stock appears fundamentally overvalued with a trailing P/E of 129.75, significantly higher than sector peers</li>
 <li>Technical indicators show bearish momentum with the stock trading below key moving averages and declining trading volumes</li>
 <li>While the company maintains a dominant market position and is securing large orders, operational inefficiencies are preventing these advantages from translating to shareholder returns</li>
-<li><strong>💡 Key Takeaway</strong> - Diversification efforts and strong order book provide potential catalysts for future turnaround, but significant improvement in financial metrics is needed first</li>
+<li>Diversification efforts and strong order book provide potential catalysts for future turnaround, but significant improvement in financial metrics is needed first</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
