--- a/reports/HAL_report.html
+++ b/reports/HAL_report.html
@@ -276,7 +276,7 @@
 <li>Promoter holding remains stable at 71.64%, indicating strong insider confidence in HAL's long-term prospects</li>
 <li>Foreign institutional investors (FIIs) increased their holdings from 11.85% to 12.26%, showing growing international interest</li>
 <li>Domestic institutional investors (DIIs) slightly decreased holdings from 8.37% to 8.16%, representing a minor shift</li>
-<li>No pledged promoter shares further reinforces positive institutional outlook on HAL's financial stability</li>
+<li><strong>💡 Key Takeaway</strong> - No pledged promoter shares further reinforces positive institutional outlook on HAL's financial stability</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -291,7 +291,7 @@
 <li>HAL maintains exceptional financial strength with minimal debt and growing profitability despite a challenging market environment</li>
 <li>Technical indicators suggest the stock remains in a downtrend but is showing early signs of potential stabilization</li>
 <li>Long-term growth prospects are supported by India's expanding defense budget and HAL's strategic position, though increased private sector competition poses challenges</li>
-<li><strong>💡 Key Takeaway</strong> - The 13.83% yearly stock price increase significantly underperforms sector peers despite solid fundamentals, suggesting potential for relative valuation improvement</li>
+<li>The 13.83% yearly stock price increase significantly underperforms sector peers despite solid fundamentals, suggesting potential for relative valuation improvement</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
