--- a/reports/HINDUNILVR_report.html
+++ b/reports/HINDUNILVR_report.html
@@ -288,7 +288,7 @@
 <li>Hindustan Unilever exhibits strong insider confidence with promoters holding a substantial 62.27% stake</li>
 <li>Institutional investors show significant interest with FIIs holding 18.59% and DIIs holding 24.84%</li>
 <li>Promoter shareholding has remained stable at around 62% over the past year, indicating long-term commitment</li>
-<li>While FII holdings have decreased slightly, DII holdings have increased correspondingly, suggesting domestic institutional confidence</li>
+<li><strong>💡 Key Takeaway</strong> - While FII holdings have decreased slightly, DII holdings have increased correspondingly, suggesting domestic institutional confidence</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -303,7 +303,7 @@
 <li>Current technical picture remains bearish with prices trending below key moving averages and negative momentum</li>
 <li>Premium valuation persists despite price correction, indicating market's long-term confidence in business model</li>
 <li>Strategic corporate actions like ice-cream business demerger reflect management's focus on operational optimization</li>
-<li><strong>💡 Key Takeaway</strong> - Investors should watch for volume growth recovery and margin preservation in coming quarters as key performance indicators</li>
+<li>Investors should watch for volume growth recovery and margin preservation in coming quarters as key performance indicators</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
