--- a/reports/KOTAKBANK_report.html
+++ b/reports/KOTAKBANK_report.html
@@ -257,7 +257,7 @@
 <ul>
 <li>Institutional investors hold a significant 46.02% of Kotak Mahindra Bank shares, indicating strong confidence from professional investors.</li>
 <li>Insider holdings are notably high at 28.82%, much higher than competitors (1.81-2.2%), suggesting strong management belief in the company's future.</li>
-<li>The stable promoter holdings at approximately 25.89% over recent quarters further reinforces insider confidence.</li>
+<li><strong>💡 Key Takeaway</strong> - The stable promoter holdings at approximately 25.89% over recent quarters further reinforces insider confidence.</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -272,7 +272,7 @@
 <li>The bank's high insider ownership (28.82%) signals management confidence, while institutional backing (46.02%) provides additional validation.</li>
 <li>Recent technical indicators suggest a bullish trend forming after February's pullback, with increasing volume indicating growing institutional interest.</li>
 <li>While revenue growth lags behind peers, strong earnings growth and management efficiency offset this concern.</li>
-<li><strong>💡 Key Takeaway</strong> - The recent acquisition of Standard Chartered's personal loan business should enhance Kotak's retail lending capabilities and market share.</li>
+<li>The recent acquisition of Standard Chartered's personal loan business should enhance Kotak's retail lending capabilities and market share.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
