--- a/reports/MARUTI_report.html
+++ b/reports/MARUTI_report.html
@@ -289,7 +289,7 @@
 <li>Promoter shareholding increased slightly from 58.19% to 58.29%, indicating growing insider confidence in long-term prospects</li>
 <li>Strong institutional interest with FIIs holding 15.47% and DIIs holding 15.58% of equity, providing stability to the shareholder base</li>
 <li>Absence of promoter pledged shares further underscores confidence among key stakeholders and reduces governance concerns</li>
-<li>Retail investor holdings remain modest at 3.29%, suggesting potential for increased retail participation as story evolves</li>
+<li><strong>💡 Key Takeaway</strong> - Retail investor holdings remain modest at 3.29%, suggesting potential for increased retail participation as story evolves</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -305,7 +305,7 @@
 <li>Near-term technical weakness and valuation concerns present short-term headwinds despite long-term fundamental strength</li>
 <li>The company's proactive approach to EV transition balances maintaining combustion engine leadership while building future electric capabilities</li>
 <li>Minimal financial risk due to industry-leading low leverage provides stability during potential automotive sector volatility</li>
-<li><strong>💡 Key Takeaway</strong> - Significant capacity expansion plans demonstrate management confidence in long-term Indian automotive market growth prospects</li>
+<li>Significant capacity expansion plans demonstrate management confidence in long-term Indian automotive market growth prospects</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
