--- a/reports/MAZDOCK_report.html
+++ b/reports/MAZDOCK_report.html
@@ -286,7 +286,7 @@
 <li>Promoter holding remains stable at 84.83% with no reported pledging, indicating strong insider confidence.</li>
 <li>Institutional ownership is relatively low at 2.0%, compared to peers like BEL (29.1%) and SOLARINDS (15.82%).</li>
 <li>No significant changes in ownership patterns have been reported recently.</li>
-<li>The high promoter holding without selling activity suggests confidence in the company's future prospects.</li>
+<li><strong>💡 Key Takeaway</strong> - The high promoter holding without selling activity suggests confidence in the company's future prospects.</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -302,7 +302,7 @@
 <li>The company's sole contender status for a $5 billion submarine project and ambitious expansion plans create substantial growth runway.</li>
 <li>Technical indicators suggest a bullish recovery from recent pullback, with improving momentum metrics.</li>
 <li>Current valuation exceeds intrinsic value estimates, creating potential risk despite strong fundamentals.</li>
-<li><strong>💡 Key Takeaway</strong> - Investors should monitor upcoming project execution and valuation metrics when considering position sizing.</li>
+<li>Investors should monitor upcoming project execution and valuation metrics when considering position sizing.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
