--- a/reports/NYKAA_report.html
+++ b/reports/NYKAA_report.html
@@ -287,7 +287,7 @@
 <li>Promoter holdings remain stable with minimal decrease from 52.18% to 52.16%, indicating steady insider confidence</li>
 <li>Foreign institutional investors (FIIs) have reduced holdings from 10.13% to 9.05%, showing modest selling pressure</li>
 <li>Domestic institutional investors (DIIs) increased holdings from 17.00% to 18.23%, reflecting growing local institutional support</li>
-<li>No pledged promoter shares suggests strong insider commitment despite the minor reduction in holdings</li>
+<li><strong>💡 Key Takeaway</strong> - No pledged promoter shares suggests strong insider commitment despite the minor reduction in holdings</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -302,7 +302,7 @@
 <li>The extreme P/E ratio (914) suggests serious overvaluation concerns that could limit near-term upside potential</li>
 <li>Technical indicators point to bearish price action with the stock trading below key moving averages</li>
 <li>Stable promoter holdings and increasing domestic institutional interest provide foundational support</li>
-<li><strong>💡 Key Takeaway</strong> - The disconnect between business performance and stock valuation creates a "wait and watch" scenario for most investor types</li>
+<li>The disconnect between business performance and stock valuation creates a "wait and watch" scenario for most investor types</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
