--- a/reports/SUZLON_report.html
+++ b/reports/SUZLON_report.html
@@ -288,7 +288,7 @@
 <li>Institutional investors have increased their holdings over the past year, with overall institutional ownership at 17.93%</li>
 <li>Promoter shareholding remains stable at 23.32% with no signs of selling</li>
 <li>Elimination of promoter pledging indicates improved financial position and confidence</li>
-<li>Foreign and domestic institutional investor stake increases reflect growing confidence in company's prospects</li>
+<li><strong>💡 Key Takeaway</strong> - Foreign and domestic institutional investor stake increases reflect growing confidence in company's prospects</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -305,7 +305,7 @@
 <li>Technical indicators show consolidation with potential bullish shift, but price remains below key moving averages</li>
 <li>Planned capacity expansion and growing order book provide solid foundation for future growth</li>
 <li>Institutional investor confidence increasing, reflecting positive sentiment toward company's prospects</li>
-<li><strong>💡 Key Takeaway</strong> - Company well-positioned to benefit from India's renewable energy growth but faces competitive and execution challenges</li>
+<li>Company well-positioned to benefit from India's renewable energy growth but faces competitive and execution challenges</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
