--- a/reports/YESBANK_report.html
+++ b/reports/YESBANK_report.html
@@ -273,7 +273,7 @@
 <ul>
 <li>Insider holdings are high at 41.02%, suggesting management confidence, but institutional ownership is low at 17.14%.</li>
 <li>This ownership structure contrasts with competitors like Axis Bank and ICICI Bank, which have 2-3% insider holdings and 54-69% institutional ownership.</li>
-<li>The combination of high insider holdings but negative analyst sentiment indicates a disconnect between management outlook and market perception.</li>
+<li><strong>💡 Key Takeaway</strong> - The combination of high insider holdings but negative analyst sentiment indicates a disconnect between management outlook and market perception.</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -288,7 +288,7 @@
 <li>The stock's -31% performance over the past year reflects market concerns about the bank's competitive position.</li>
 <li>Technical indicators suggest continued bearish momentum with distribution pattern evident in volume data.</li>
 <li>High insider ownership contrasts with low institutional ownership and negative analyst sentiment.</li>
-<li><strong>💡 Key Takeaway</strong> - The bank faces an uphill battle to improve its operational efficiency and profitability metrics to justify a rerating.</li>
+<li>The bank faces an uphill battle to improve its operational efficiency and profitability metrics to justify a rerating.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
