--- a/reports/ZOMATO_report.html
+++ b/reports/ZOMATO_report.html
@@ -283,7 +283,7 @@
 <li>Zomato has no promoter holdings, eliminating concerns about promoter selling.</li>
 <li>Foreign institutional investors (FIIs) have reduced their holdings from 52.53% to 47.31% between September and December 2024.</li>
 <li>Domestic institutional investors (DIIs) increased their stakes from 17.32% to 20.47% in the same period.</li>
-<li>The number of FII investors increased from 1,546 to 1,618 in Q4 2024, suggesting broader foreign institutional interest despite reduced overall holdings.</li>
+<li><strong>💡 Key Takeaway</strong> - The number of FII investors increased from 1,546 to 1,618 in Q4 2024, suggesting broader foreign institutional interest despite reduced overall holdings.</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -299,7 +299,7 @@
 <li>The company's leadership position (58% market share) in India's rapidly growing food delivery market provides a solid foundation for future growth.</li>
 <li>Strategic diversification into quick commerce and ticketing through acquisitions positions Zomato well in the broader digital commerce ecosystem.</li>
 <li>Current technical weakness presents potential entry opportunities for long-term investors, though short-term traders should exercise caution.</li>
-<li><strong>💡 Key Takeaway</strong> - Regulatory challenges including antitrust investigations remain the biggest near-term risk to the company's business model.</li>
+<li>Regulatory challenges including antitrust investigations remain the biggest near-term risk to the company's business model.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
