--- a/reports/CGPOWER_report.html
+++ b/reports/CGPOWER_report.html
@@ -280,7 +280,7 @@
 <li>Promoters maintain a significant 58.21% stake, indicating strong confidence in the company's prospects</li>
 <li>Institutional investors hold consistent positions with 16.51% ownership</li>
 <li>No major selling observed from promoters or institutions, contradicting any hypothesis of insider distribution</li>
-<li>Recent shareholding pattern shows stable ownership with no unusual accumulation or dumping patterns</li>
+<li><strong>💡 Key Takeaway</strong> - Recent shareholding pattern shows stable ownership with no unusual accumulation or dumping patterns</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -296,7 +296,7 @@
 <li>Premium valuation (98x P/E) suggests market has already priced in significant growth expectations</li>
 <li>Strategic initiatives including power transformer capacity expansion and entry into semiconductor manufacturing provide growth visibility</li>
 <li>Technical picture shows potential bottoming pattern but requires confirmation through key resistance levels</li>
-<li><strong>💡 Key Takeaway</strong> - Investors should weigh the strong operational performance against valuation concerns when considering position sizing</li>
+<li>Investors should weigh the strong operational performance against valuation concerns when considering position sizing</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
