--- a/reports/HDFCBANK_report.html
+++ b/reports/HDFCBANK_report.html
@@ -289,7 +289,7 @@
 <li>Institutional investors hold 53.59% of shares, indicating strong confidence from sophisticated market participants</li>
 <li>Insider ownership is relatively low at 1.81%, compared to 28.82% for Kotak Bank and 58.31% for SBI</li>
 <li>Recent insider sales reported in February 2025, though these appear to reflect individual portfolio adjustments rather than lack of confidence</li>
-<li>No clear evidence of promoter selling activity based on available data</li>
+<li><strong>💡 Key Takeaway</strong> - No clear evidence of promoter selling activity based on available data</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -305,7 +305,7 @@
 <li>Post-merger integration with HDFC Limited has created temporary headwinds but strengthens long-term competitive positioning</li>
 <li>Stock appears potentially undervalued based on multiple valuation models despite trading at premium to some peers</li>
 <li>Technical indicators show consolidation phase with potential accumulation, requiring monitoring of key support/resistance levels</li>
-<li><strong>💡 Key Takeaway</strong> - Conservative investors may find attractive entry point given strong fundamentals and dividend yield, while traders should watch for technical breakout confirmation</li>
+<li>Conservative investors may find attractive entry point given strong fundamentals and dividend yield, while traders should watch for technical breakout confirmation</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
