--- a/reports/ITC_report.html
+++ b/reports/ITC_report.html
@@ -264,7 +264,7 @@
 <ul>
 <li>Institutional investors hold a significant 47.83% stake in ITC, while insiders maintain 28.38%, indicating strong professional investor confidence.</li>
 <li>Foreign Institutional Investors (FIIs) have reduced their holdings from 43.3% to 40.2% over the past year, while Domestic Institutional Investors (DIIs) have increased from 42.0% to 45.0%.</li>
-<li>The absence of pledged shares reflects financial stability and prudent management, while the consistent institutional ownership suggests no significant redistribution of shares.</li>
+<li><strong>💡 Key Takeaway</strong> - The absence of pledged shares reflects financial stability and prudent management, while the consistent institutional ownership suggests no significant redistribution of shares.</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -278,7 +278,7 @@
 <li>ITC demonstrates strong financial fundamentals with consistent profitability, low debt, and attractive dividends, though revenue growth remains modest.</li>
 <li>The company's diversified business model provides stability, while strategic initiatives like the hotel business demerger and 'ITC Next' strategy position it for future growth.</li>
 <li>Technical indicators suggest a potential bottoming pattern with improving momentum, though confirmation of trend reversal requires sustained trading above current resistance levels.</li>
-<li><strong>💡 Key Takeaway</strong> - The stock offers particular appeal for dividend and defensive investors seeking stability and income in a volatile market environment.</li>
+<li>The stock offers particular appeal for dividend and defensive investors seeking stability and income in a volatile market environment.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
