--- a/reports/PAYTM_report.html
+++ b/reports/PAYTM_report.html
@@ -282,7 +282,7 @@
 <ul>
 <li>Institutional investors hold 35.38% of Paytm shares, while insiders control 35.26%, suggesting balanced ownership structure.</li>
 <li>Foreign Institutional Investors have reduced their holdings from 63.72% to 56.2% over recent quarters, potentially signaling decreased confidence.</li>
-<li>Domestic Institutional Investors have increased their holdings from 6.07% to 11.88%, suggesting some domestic institutions may see value at current prices.</li>
+<li><strong>💡 Key Takeaway</strong> - Domestic Institutional Investors have increased their holdings from 6.07% to 11.88%, suggesting some domestic institutions may see value at current prices.</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -297,7 +297,7 @@
 <li>The regulatory challenge from the Enforcement Directorate adds uncertainty to an already volatile investment case.</li>
 <li>India's booming digital payments market presents significant growth opportunities, but Paytm needs to improve execution to capitalize on them.</li>
 <li>The stock carries high risk for both investors and traders, with technical indicators showing continued bearish momentum.</li>
-<li><strong>💡 Key Takeaway</strong> - Conservative investors should approach with caution while contrarians and high-risk seekers may find opportunity in potential turnaround.</li>
+<li>Conservative investors should approach with caution while contrarians and high-risk seekers may find opportunity in potential turnaround.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
