--- a/reports/SBIN_report.html
+++ b/reports/SBIN_report.html
@@ -284,7 +284,7 @@
 <li>Promoter holding remains stable at 57.43% with no pledged shares, indicating strong commitment</li>
 <li>Foreign Institutional Investors decreased holdings by 0.44%, suggesting slight reduction in foreign confidence</li>
 <li>Domestic Institutional Investors increased holdings by 0.83%, particularly mutual funds (up 0.88%)</li>
-<li>No significant insider trading activities reported, suggesting stability in management sentiment</li>
+<li><strong>💡 Key Takeaway</strong> - No significant insider trading activities reported, suggesting stability in management sentiment</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -299,7 +299,7 @@
 <li>Strong technical recovery emerging but remains below key moving averages, requiring confirmation of trend reversal</li>
 <li>High promoter holding and increasing domestic institutional investment signal confidence in long-term prospects</li>
 <li>Strategic initiatives in technology and digital banking position SBI well for future growth in rapidly evolving financial landscape</li>
-<li><strong>💡 Key Takeaway</strong> - Attractive dividend yield offers steady income potential while waiting for potential valuation correction</li>
+<li>Attractive dividend yield offers steady income potential while waiting for potential valuation correction</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
