--- a/reports/SWIGGY_report.html
+++ b/reports/SWIGGY_report.html
@@ -284,7 +284,7 @@
 <li>Institutional ownership is substantial at 14.08%, with insider holdings at 61.52%, suggesting management confidence despite challenges.</li>
 <li>Notable institutional investments include Amitabh Bachchan's family office (August 2024) and The Ramco Cements (August 2023), indicating some high-profile investor confidence.</li>
 <li>The absence of an identifiable promoter group and no promoter share pledging suggests a transparent ownership structure dominated by institutional and retail investors.</li>
-<li>No evidence suggests unusual institutional accumulation or distribution patterns in recent periods that would signal significant sentiment shifts.</li>
+<li><strong>💡 Key Takeaway</strong> - No evidence suggests unusual institutional accumulation or distribution patterns in recent periods that would signal significant sentiment shifts.</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -300,7 +300,7 @@
 <li>The company's high debt ratio (14.738) coupled with ongoing losses creates significant financial risk that investors should carefully consider.</li>
 <li>Technical indicators show early signs of stabilization after a prolonged downtrend, though the overall trend remains bearish in the short term.</li>
 <li>Analyst sentiment remains surprisingly bullish despite financial challenges, with a consensus "buy" rating and target price offering 49% upside potential.</li>
-<li><strong>💡 Key Takeaway</strong> - Swiggy's future success depends on its ability to leverage its strong market position and favorable sector trends while addressing operational inefficiencies to achieve profitability.</li>
+<li>Swiggy's future success depends on its ability to leverage its strong market position and favorable sector trends while addressing operational inefficiencies to achieve profitability.</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
