--- a/reports/TATAMOTORS_report.html
+++ b/reports/TATAMOTORS_report.html
@@ -287,7 +287,7 @@
 <li>Promoter holding remained steady at 42.58% as of December 31, 2024</li>
 <li>Foreign Institutional Investor holdings decreased from 20.54% to 18.66% in most recent quarter</li>
 <li>Between March and September 2024, promoters reduced their shareholding from 46.36% to 42.58%</li>
-<li>No specific data available on Domestic Institutional Investor movements</li>
+<li><strong>💡 Key Takeaway</strong> - No specific data available on Domestic Institutional Investor movements</li>
 </ul>
 <h3>Corporate Actions and Business Expansions 💼</h3>
 <ul>
@@ -303,7 +303,7 @@
 <li>Stock appears significantly undervalued compared to peers but continues to underperform the market and sector</li>
 <li>Technical indicators show potential bottoming process but need confirmation through volume and price action</li>
 <li>Long-term success depends on navigating JLR's transition strategy and maintaining commercial vehicle segment dominance</li>
-<li><strong>💡 Key Takeaway</strong> - Risk-reward appears favorable for long-term investors but near-term volatility likely to persist</li>
+<li>Risk-reward appears favorable for long-term investors but near-term volatility likely to persist</li>
 </ul>
 <hr />
 <p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
