--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
 
             setTimeout(typeEffect, 100); // Start typing after delay
         }
+        typing_animation()
 
         document.addEventListener('DOMContentLoaded', async function () {
             const stockContainer = document.querySelector('.stock-container');
